reports/7_hw.log
Traceback (most recent call last):
  File "/mnt/software/anaconda3/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/mnt/software/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/mnt/software/anaconda3/lib/python3.8/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/mnt/software/anaconda3/lib/python3.8/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/mnt/software/anaconda3/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/mnt/software/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 553, in async_execute
    await self.async_execute_cell(
  File "/mnt/software/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/mnt/software/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# leave these four lines as is, they are needed to get the plot function working
%matplotlib inline
import matplotlib
import numpy as np
import matplotlib.pyplot as plt

# define any empty lists you need here
### start code here (~ 2 lines)
rate_list =
npv_list =
### end code here

# loop over rates from 0.01 to 0.51, incrementing by 0.02 each time
### start code here (~ 3 lines)
for
    # inside the loop, calculate the NPV.  Update any lists that may need updating
    npv_list.append(  )
    rate_list.append(  )
    
### end code here

# plot the NPV for each rate you considered here
plt.plot(rate_list, npv_list)
plt.show()
------------------

[0;36m  File [0;32m"<ipython-input-7-5779d63ad209>"[0;36m, line [0;32m9[0m
[0;31m    rate_list =[0m
[0m               ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-7-5779d63ad209>, line 9)

